--- a/dist.ini
+++ b/dist.ini
@@ -6,8 +6,4 @@ copyright_year   = 2014
 
 [@Author::GETTY]
 
-[Prereqs]
-
-[Prereqs / TestRequires]
-Test::More = 0.98
-Test::LoadAllModules = 0.021
+[Prereqs::FromCPANfile]
